--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         button {
             margin-top: 15px;
-            padding: 12px 20px;
-            font-size: 16px;
+            padding: 14px 24px;
+            font-size: 17px;
             border: none;
             border-radius: 30px;
             cursor: pointer;
@@ -127,7 +127,7 @@
         no começo de algo ainda melhor?
     </p>
     <button id="yes" onclick="accept()">SIM 💖</button>
-    <button id="no" onmouseover="escape()">Não 😐</button>
+   <button id="no" ontouchstart="escape()" onmouseover="escape()">Não 😐</button>
 </div>
 
 <div class="box hidden" id="final">
@@ -167,3 +167,4 @@
 
 </body>
 </html>
+
